package application;
public class MainLauncher {
    public static void main(String[] args) {
        RezervasyonApplication.main(args);
    }
}